packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_governor_timelock_execution_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        governor_timelock_execution: GovernorTimelockExecutionComponent::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState) {}
    use openzeppelin_governance::governor::extensions::GovernorTimelockExecutionComponent;

    component!(
        path: GovernorTimelockExecutionComponent,
        storage: governor_timelock_execution,
        event: GovernorTimelockExecutionEvent,
    );

    impl GovernorTimelockExecutionInternalImpl =
        GovernorTimelockExecutionComponent::InternalImpl<ContractState>;
    impl GovernorTimelockExecutionGovernorExecution =
        GovernorTimelockExecutionComponent::GovernorExecution<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        GovernorTimelockExecutionEvent: GovernorTimelockExecutionComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

GovernorTimelockExecution

This may lead to unexpected behavior.
We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
