packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_multisig_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub multisig: MultisigComponent::Storage,
    }

    use openzeppelin_governance::multisig::MultisigComponent;

    component!(path: MultisigComponent, storage: multisig, event: MultisigEvent);

    impl MultisigInternalImpl = MultisigComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        MultisigEvent: MultisigComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

Multisig

This may lead to unexpected behavior. We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
