packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_ownable_no_initializer.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod Owned {
    use starknet::ContractAddress;

    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        pub ownable: OwnableComponent::Storage,
    }

    #[constructor]
    fn constructor(ref self: ContractState) {}

    use openzeppelin_access::ownable::OwnableComponent;

    component!(path: OwnableComponent, storage: ownable, event: OwnableEvent);

    impl OwnableInternalImpl = OwnableComponent::InternalImpl<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        OwnableEvent: OwnableComponent::Event,
    }
}


Diagnostics:

====
Warning: It looks like the initializers for the following components are missing:

Ownable

This may lead to unexpected behavior. We recommend adding the corresponding initializer calls to the constructor.
====

AuxData:

None
